[workspace]
members = [
    "cli",
    "subp2p-explorer",
]

resolver = "2"

[workspace.package]
authors = ["Alexandru Vasile <alexandru.vasile@parity.io>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Submit extrinsics and explore substrate p2p network"
repository = "https://github.com/lexnv/subp2p-explorer"
homepage = "https://github.com/lexnv/subp2p-explorer"
license = "Apache-2.0 OR GPL-3.0"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
tokio = { version = "1.28", features = ["macros", "time", "rt-multi-thread"] }
async-trait = "0.1"
env_logger = "0.10"
tracing-subscriber = { version = "0.3" }
tracing = "0.1.34"
futures = "0.3.28"
libp2p = { version = "0.52.0", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
rand = "0.8.5"
fnv = "1.0.6"
log = "0.4.17"
either = "1.5.3"
void = "1.0"
pin-project = "1.0.12"
asynchronous-codec = "0.6"
unsigned-varint = { version = "0.7.1", features = ["futures", "asynchronous_codec"] }
thiserror = "1.0"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.4.0", features = ["derive"] }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "scale-info", "serde"] }
hex = "0.4.3"
clap = { version = "4.4.4", features = ["derive", "cargo"] }
ip_network = "0.4.1"
maxminddb = "0.23.0"
serde_json = { version = "1.0.108" }
trust-dns-resolver = "0.23.0"
multihash-codetable = { version = "0.1.1", features = [
	"digest",
	"serde",
	"sha2",
] }
jsonrpsee = { version = "0.21", features = ["async-client", "client-ws-transport-native-tls"] }
prost-build = "0.11"

#workspace crates:
subp2p-explorer = { version = "0.1.0", path = "subp2p-explorer", default-features = false }
