[package]
name = "subp2p-explorer-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Explore substrate p2p network"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
async-trait = { workspace = true }
env_logger = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true, features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
rand = { workspace = true }
fnv = { workspace = true }
log = { workspace = true }
either = { workspace = true }
void = { workspace = true }
pin-project = { workspace = true }
asynchronous-codec = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures", "asynchronous_codec"] }
thiserror = { workspace = true }
bytes = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
primitive-types = { workspace = true, default-features = false, features = ["codec", "scale-info", "serde"] }
hex = { workspace = true }
schnorrkel = "0.11.4"
blake2 = "0.10.4"
multihash-codetable = { workspace = true, features = ["digest", "serde", "sha2"] }
bs58 = { version = "0.5.0", features = ["alloc"] }
prost = "0.12"
litep2p = { workspace = true }
multiaddr ={ workspace = true }
multihash = { workspace = true, default-features = false }
libp2p-identity = { features = ["ed25519", "peerid", "rand"], workspace = true }
libp2p-tls = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }

[build-dependencies]
prost-build = "0.11"